--- a/manifest.json
+++ b/manifest.json
@@ -1,37 +1,37 @@
 {
-  "name": "Media HPku",
-  "short_name": "Media HPku",
-  "start_url": "https://www.mediahpku.com/",
+  "name": "Yuuari",
+  "short_name": "Yuuari",
+  "start_url": "https://www.yuuari.com/",
   "display": "standalone",
   "background_color": "#fff",
-  "theme_color": "#009688",
-  "description": "Situs yang membagikan informasi seputar gatget, seperti spesifikasi handphone, tutorial dan tips aplikasi.",
+  "theme_color": "#C51162",
+  "description": "Berbagi informasi seputar teknologi, keuangan digital, belanja online, internet, serta tren gaya hidup di era digital.",
   "icons": [{
-    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s48/mediahpku.png",
+    "src": "https://1.bp.blogspot.com/-jUplFWp2zn4/YNCV3Pm9wTI/AAAAAAAAGRY/golHOe_A0Ycvc4Av0P8erj1guGix4BMRQCLcBGAsYHQ/s48/icone.png",
     "sizes": "48x48",
     "type": "image/png"
   }, {
-    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s72/mediahpku.png",
+    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s72/icone.png",
     "sizes": "72x72",
     "type": "image/png"
   }, {
-    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s96/mediahpku.png",
+    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s96/icone.png",
     "sizes": "96x96",
     "type": "image/png"
   }, {
-    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s144/mediahpku.png",
+    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s144/icone.png",
     "sizes": "144x144",
     "type": "image/png"
   }, {
-    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s168/mediahpku.png",
+    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s168/icone.png",
     "sizes": "168x168",
     "type": "image/png"
   }, {
-    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s192/mediahpku.png",
+    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s192/icone.png",
     "sizes": "192x192",
     "type": "image/png"
   }, {
-    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s512/mediahpku.png",
+    "src": "https://1.bp.blogspot.com/-bF1Tnh4CVfI/XxE3k7lEv6I/AAAAAAAAFKo/7CYsxDyTy_gEuG38UGaqE-aW2IC-2HNLQCLcBGAsYHQ/s512/icone.png",
     "sizes": "512x512",
     "type": "image/png"
   }]
